--- a/blog/.htaccess
+++ b/blog/.htaccess
@@ -1,1 +1,1 @@
-AddDescription "This is what a post looks like" this-is-what-a-post-looks-like.html
+AddDescription "This is what a post looks like" "this-is-what-a-post-looks-like.html" #Thu, 02 Jul 2020 15:54:42 -0300
